--- a/GroupAssignment1/Properties/launchSettings.json
+++ b/GroupAssignment1/Properties/launchSettings.json
@@ -10,13 +10,12 @@
   "profiles": {
     "GroupAssignment1": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7242;http://localhost:5249",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-
+      },
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
