--- a/GroupAssignment1/GroupAssignment1.csproj
+++ b/GroupAssignment1/GroupAssignment1.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="Views\Housing\Index.cshtml" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.12" />
   </ItemGroup>
 
 </Project>
